# ChangeLog for media-video/ffmpeg
# Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/media-video/cvs-repo/gentoo-x86/media-video/ffmpeg/ChangeLog,v 1.129 2006/03/05 00:24:52 lu_zero Exp $

  05 Mar 2006; Luca Barbato <lu_zero@gentoo.org>
  ffmpeg-0.4.9_p20060302.ebuild:
  Improved ebuild with amr and v4l2 support, thanks to Philip Kovacs
  <kovacsp3@comcast.net> for the improved ebuild, other minor fixes

  04 Mar 2006; Luca Barbato <lu_zero@gentoo.org>
  files/ffmpeg-shared-gcc4.1.patch:
  fix

  04 Mar 2006; Luca Barbato <lu_zero@gentoo.org>
  +files/ffmpeg-shared-gcc4.1.patch, ffmpeg-0.4.9_p20060302.ebuild:
  ffmpeg-shared-gcc4 patch is back

*ffmpeg-0.4.9_p20060302 (03 Mar 2006)

  03 Mar 2006; Luca Barbato <lu_zero@gentoo.org>
  +ffmpeg-0.4.9_p20060302.ebuild:
  New snapshot

  15 Feb 2006; Diego Pettenò <flameeyes@gentoo.org>
  ffmpeg-0.4.9_p20050226-r3.ebuild:
  Add missing sdl useflag in IUSE.

  30 Jan 2006; Luca Barbato <lu_zero@gentoo.org>
  +files/ffmpeg-shared-gcc4.patch, ffmpeg-0.4.9_p20051216.ebuild:
  x86 workaround from Kevin F. Quinn <kevquinn@gentoo.org>, I'll share the
  blame if breaks something

  09 Jan 2006; Bryan Østergaard <kloeri@gentoo.org
  ffmpeg-0.4.9_p20051216.ebuild:
  Stable on alpha, bug 116181.

  06 Jan 2006; Luca Barbato <lu_zero@gentoo.org>
  ffmpeg-0.4.9_p20051216.ebuild:
  Warning added

  06 Jan 2006; Luca Barbato <lu_zero@gentoo.org>
  files/ffmpeg-soname-symlink.patch:
  minor fix for osx

  03 Jan 2006; Bryan Østergaard <kloeri@gentoo.org
  ffmpeg-0.4.9_p20051216.ebuild:
  ~alpha keyword, bug 116181.

  02 Jan 2006; Fabian Groffen <grobian@gentoo.org>
  ffmpeg-0.4.9_p20051216.ebuild:
  Marked ~ppc-macos (bug #116181)

  02 Jan 2006; Michael Hanselmann <hansmi@gentoo.org>
  ffmpeg-0.4.9_p20051216.ebuild:
  Stable on ppc.

  01 Jan 2006; Simon Stelling <blubb@gentoo.org>
  ffmpeg-0.4.9_p20051216.ebuild:
  stable on amd64 wrt bug 116181
