@@ -1,6 +1,10 @@
 # ChangeLog for media-video/ffmpeg
 # Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-video/cvs-repo/gentoo-x86/media-video/ffmpeg/ChangeLog,v 1.129 2006/03/05 00:24:52 lu_zero Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-video/cvs-repo/gentoo-x86/media-video/ffmpeg/ChangeLog,v 1.130 2006/03/06 21:50:54 lu_zero Exp $
+
+  06 Mar 2006; Luca Barbato <lu_zero@gentoo.org>
+  ffmpeg-0.4.9_p20060302.ebuild:
+  merged v4l and v4l2
 
   05 Mar 2006; Luca Barbato <lu_zero@gentoo.org>
   ffmpeg-0.4.9_p20060302.ebuild:
